<resources>
    <string name="app_name">CheckIt</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_scanner">ScannerActivity</string>

    <!-- common -->
    <string name="title_loading">Загрузка</string>
    <string name="title_back">Назад</string>
    <string name="shop_no_title">Без названия</string>
    <string name="refresh">Обновить</string>
    <string name="title_manual_input">Ручной ввод</string>

    <!-- bottom menu -->
    <string name="title_checks">Чеки</string>
    <string name="title_stats">Статистика</string>

    <!-- Scanner activity -->
    <string name="scanner_permission_warning">Необходимо разрешить доступ к камере.</string>
    <string name="scanner_permission_btn">Разрешить</string>
    <string name="scanner_enter_manually">Ввести вручную</string>

    <!-- errors -->
    <string name="error_check_not_loaded">Не удалось получить чек, попробуйте позже.</string>
    <string name="error_occured">Произошла ошибка!</string>
    <string name="load_error">Произошла ошибка загрузки</string>
    <string name="error_empty_field">Поле не должно быть пустым</string>
    <string name="error_empty_date">Нажмите, чтобы выбрать дату</string>
    <string name="error_future_date">Вы не могли получить чек в будущем</string>

    <!-- checks fragment -->
    <string name="check_not_found_yet">Чек пока не получен</string>
    <string name="empty_price">0.00</string>
    <string name="format_price">%.2f руб</string>
    <string name="format_percent">%.2f %%</string>
    <string name="format_float">%.2f</string>
    <string name="symbol_ruble">₽</string>
    <string name="format_quantity">%s × %.2f₽</string>
    <string name="no_checks">У вас пока нет чеков. \nНажмите кнопку сканирования, чтобы добавить.</string>
    <string name="check_deleted">Чек удален.</string>
    <string name="no_title">Без названия</string>

    <!-- dialogs -->
    <string name="check_saved">Чек сохранен</string>
    <string name="check_waiting">Чек пока не найден</string>
    <string name="check_waiting_description">По закону чек должен быть передан в налоговую в течение 24 часов.
        Как только чек появится, мы отобразим его в вашем списке.</string>
    <string name="check_failed">Не удалось найти чек</string>
    <string name="check_failed_description">Истек срок хранения чека в налоговой.
        Обычно ФНС хранит чеки не более 2&#8211;3 месяцев.</string>
    <string name="open">Открыть</string>
    <string name="scan_more"><u>Сканировать еще</u></string>
    <string name="scan_try_again"><u>Попробовать еще</u></string>
    <string name="continue_manual_input">Продолжить ввод</string>

    <!-- Stats -->
    <string name="shops">Магазины</string>
    <string name="categories">Категории</string>
    <string name="into">в</string>

    <!-- date popup -->
    <string name="date_total">за все время</string>
    <string name="date_day">сегодня</string>
    <string name="date_week">на этой неделе</string>
    <string name="date_month">в этом месяце</string>
    <string name="date_last_day">за последний день</string>
    <string name="date_last_week">за последнюю неделю</string>
    <string name="date_last_month">за последний месяц</string>

    <string name="interval_month">Месяц</string>
    <string name="interval_week">Неделя</string>
    <string name="interval_day">День</string>
    <string name="interval_own">Свой промежуток</string>

    <!-- Habits -->
    <string name="title_habits">Habits</string>
    <string name="popular_shop">Любимый магазин</string>
    <string name="popular_item">Самый популярный товар</string>
    <string name="most_expensive_item">Самый дорогой товар</string>
    <string name="most_expensive_receipt">Самый дорогой чек</string>

    <!-- Manual input -->
    <string name="input_title_fn">ФН - номер фискального накопителя</string>
    <string name="input_title_fd">ФД - номер фискального документа</string>
    <string name="input_title_fp">ФП - фискальный признак документа</string>
    <string name="input_title_sum">Общая сумма на чеке</string>
    <string name="input_title_date">Дата и время на чеке</string>
    <string name="title_manual_send">Отправить</string>

</resources>
