<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/receiptFragment"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.receipt_input.ReceiptInputFragment">

    <include android:id="@+id/toolbar_layout"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/ll_form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_fn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_fn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_title_fn"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/color_hint"
                app:backgroundTint="@color/color_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_fd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/input_fd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_title_fd"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/color_hint"
                app:backgroundTint="@color/color_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_fp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/input_fp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_title_fp"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/color_hint"
                app:backgroundTint="@color/color_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/input_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_title_sum"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@color/color_hint"
                app:backgroundTint="@color/color_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/input_title_date"
                android:inputType="date"
                android:textColor="@color/black"
                android:textColorHint="@color/color_hint"

                app:backgroundTint="@color/color_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@color/aqua_marine"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingBottom="17dp"
        android:paddingTop="14dp"
        android:text="@string/title_manual_send"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_form"
        />

</androidx.constraintlayout.widget.ConstraintLayout>