<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix, ContentDescription"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners"
    android:layout_gravity="center"
    >

    <ImageView
        android:id="@+id/iv_share"
        android:layout_width="80dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/ic_check"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/aqua_marine"
        android:textSize="20sp"
        android:text="@string/check_saved"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/iv_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!--style="?android:attr/borderlessButtonStyle" для кнопки-->
    <Button
        android:id="@+id/btn_open"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:background="@drawable/bg_dialog_button"
        android:gravity="center"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:text="@string/open"
        android:layout_marginTop="44dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tv_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/btn_scan_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/steel_grey"
        android:lineSpacingExtra="2sp"
        android:gravity="center_horizontal"
        android:text="@string/scan_more"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/btn_open"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</android.support.constraint.ConstraintLayout>